# byte-track-eigen

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: BYTETracker.h  BaseTrack.h  BoundingBoxIoUMatching.h  BoundingBoxTrackUtils.h  Export.h  HungarianAlgorithmEigen.h  KalmanBBoxTrack.h  KalmanFilter.h  LinearAssignment.h
src/: BYTETracker.cpp  BaseTrack.cpp  BoundingBoxIoUMatching.cpp  BoundingBoxTrackUtils.cpp  HungarianAlgorithmEigen.cpp  KalmanBBoxTrack.cpp  KalmanFilter.cpp  LinearAssignment.cpp
